--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "typescript": "3.6.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "tsc './src/Adapter.ts' &&  react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
